# cs_notees

./: .gitignore  README.md  vimrc
cpp/: CMakeLists.txt  a  a.cpp  a.h  b.cpp  c.cpp  compile_run.sh  h1.h  learning_cpp.cc  notes_cpp.txt  s1.cpp  s2.cpp
cpp/cmake_practice/build_exec/: compile_install_exec.sh
cpp/cmake_practice/build_so/: compile_install_so.sh
cpp/cmake_practice/head/: add.h  div.h  mul.h
cpp/cmake_practice/install_exec/: cpp_entry_main  run_exec.sh
cpp/cmake_practice/install_so/: libZLS_SUB_SO.dylib
cpp/cmake_practice/install_so/include/: sub.h
cpp/cmake_practice/so/: CMakelists.txt
cpp/cmake_practice/so/src/: sub.cpp
cpp/cmake_practice/src/: CMakelists.txt  main.cpp
cpp/cmake_practice/src/add/: add.cpp
cpp/cmake_practice/src/div/: div.cpp
cpp/cmake_practice/src/mul/: mul.cpp
cpp/cmake_practice/static_lib/: CMakelists.txt
cpp/cmake_practice/static_lib/head/: circle.hpp
cpp/cmake_practice/static_lib/src/: circle.cpp
cpp/cpp_python/: create_so.sh  test.py
cpp/cpp_python/src/: compile_run.sh  foo.cpp
cpp/dir/: b.cpp  b.h
go/: .notes_go.txt.un~  go_learning.go  notes_go.txt  notes_go.txt~
linux/: .cmd_learning.sh.un~  cmd_learning.sh
python/: notes_python  notes_python~  python_learning.py  source_py3.7_mac.sh
python/test_pkg/: __init__.py  a.py  test.py
python/test_pkg/pkg/: __init__.py  a.py  b.py
